# pytorch-ocr

./: .gitignore  infer.py  inference.py  pyproject.toml  shell.nix  train.py
configs/: config.yaml
models/: crnn.py  saver_loader.py
pytorch_ocr/: __init__.py  infer.py  train.py
pytorch_ocr/models/: crnn.py  saver_loader.py
pytorch_ocr/utils/: data_loading.py
utils/: plot.py
